--- a/city-mapper-clustering.html
+++ b/city-mapper-clustering.html
@@ -3,101 +3,130 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>City Mapper (with Clustering)</title>
+  <title>City Mapper + GPX Routes</title>
 
   <!-- Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqdR-DJBX5mCsaw2yHbrLZqbeFZCW9jto&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
 
-  <!-- MarkerClusterer library -->
-  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
+  <!-- MarkerClusterer -->
+  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/markerclusterer.umd.js"></script>
 
-  <!-- PapaParse for CSV parsing -->
+  <!-- PapaParse -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
-    #map { height: 90vh; width: 100%; }
-    #controls { padding: 10px; background: #f9f9f9; border-bottom: 1px solid #ddd; }
+    #map { height: 88vh; width: 100%; }
+    #controls {
+      padding: 10px;
+      background: #f9f9f9;
+      border-bottom: 1px solid #ddd;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      align-items: center;
+    }
     input[type="file"] { margin-right: 10px; }
-    #status { font-size: 0.9rem; color: #555; margin-top: 5px; }
+    #status { font-size: 0.9rem; color: #333; }
+    button {
+      padding: 6px 12px;
+      background: #0078ff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover { background: #005fcc; }
   </style>
 </head>
 <body>
   <div id="controls">
-    <input type="file" id="csvFile" accept=".csv" />
-    <button id="loadBtn">Load CSV</button>
+    <label>📍 CSV: <input type="file" id="csvFile" accept=".csv" /></label>
+    <button id="loadCsvBtn">Load CSV</button>
+
+    <label>🚴‍♂️ GPX: <input type="file" id="gpxFile" accept=".gpx" /></label>
+    <button id="loadGpxBtn">Load GPX</button>
+
     <p id="status"></p>
   </div>
   <div id="map"></div>
 
-  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/markerclusterer.umd.js"></script>
+  <script>
+    let map;
+    let geocoder;
+    let markers = [];
+    let clusterManager;
+    let polyline;
 
-<script>
-  let map;
-  let geocoder;
-  let markers = [];
-  let clusterManager; // renamed from markerClusterer
-
-  function initMap() {
-    map = new google.maps.Map(document.getElementById("map"), {
-      center: { lat: 20, lng: 0 },
-      zoom: 2,
-    });
-    geocoder = new google.maps.Geocoder();
-  }
-
-  document.getElementById("loadBtn").addEventListener("click", () => {
-    const fileInput = document.getElementById("csvFile");
-    if (!fileInput.files.length) {
-      alert("Please select a CSV file first.");
-      return;
+    function initMap() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: 20, lng: 0 },
+        zoom: 2,
+      });
+      geocoder = new google.maps.Geocoder();
     }
 
-    // Clear old markers if user reloads CSV
-    if (clusterManager) {
-      clusterManager.clearMarkers();
+    // --- Load CSV ---
+    document.getElementById("loadCsvBtn").addEventListener("click", () => {
+      const fileInput = document.getElementById("csvFile");
+      if (!fileInput.files.length) {
+        alert("Please select a CSV file first.");
+        return;
+      }
+
+      if (clusterManager) clusterManager.clearMarkers();
       markers = [];
-    }
 
-    Papa.parse(fileInput.files[0], {
-      header: true,
-      skipEmptyLines: true,
-      complete: async (results) => {
-        const rows = results.data;
-        document.getElementById("status").innerText = `Loaded ${rows.length} rows...`;
+      Papa.parse(fileInput.files[0], {
+        header: true,
+        skipEmptyLines: true,
+        complete: async (results) => {
+          const rows = results.data;
+          const total = rows.length;
+          let done = 0;
 
-        for (const row of rows) {
-          const address = row["Address"]?.trim();
-          const city = row["City"]?.trim();
-          const zip = row["Zip Code"]?.trim();
-          const country = row["Country"]?.trim();
-          const lat = parseFloat(row["Latitude"]);
-          const lng = parseFloat(row["Longitude"]);
+          document.getElementById("status").innerText = `Starting geocoding... (0 of ${total})`;
 
-          if (!address && !city && !zip && !country) continue;
+          for (const row of rows) {
+            const address = row["Address"]?.trim();
+            const city = row["City"]?.trim();
+            const zip = row["Zip Code"]?.trim();
+            const country = row["Country"]?.trim();
+            const lat = parseFloat(row["Latitude"]);
+            const lng = parseFloat(row["Longitude"]);
 
-          if (!isNaN(lat) && !isNaN(lng)) {
-            addMarker(lat, lng, `${address || ""}, ${city || ""}`);
-            continue;
+            if (!address && !city && !zip && !country) {
+              done++;
+              continue;
+            }
+
+            if (!isNaN(lat) && !isNaN(lng)) {
+              addMarker(lat, lng, `${address || ""}, ${city || ""}`);
+              done++;
+              updateProgress(done, total);
+              continue;
+            }
+
+            let fullAddress = "";
+            if (address) fullAddress += address + ", ";
+            if (city) fullAddress += city + ", ";
+            if (zip) fullAddress += zip + ", ";
+            if (country) fullAddress += country;
+
+            await geocodeLocation(fullAddress, `${address || ""}, ${city || ""}`);
+            done++;
+            updateProgress(done, total);
           }
 
-          let fullAddress = "";
-          if (address) fullAddress += address + ", ";
-          if (city) fullAddress += city + ", ";
-          if (zip) fullAddress += zip + ", ";
-          if (country) fullAddress += country;
-
-          await geocodeLocation(fullAddress, `${address || ""}, ${city || ""}`);
-        }
-
-        // Create clusters after all markers are added
-        clusterManager = new MarkerClusterer({ map, markers });
-
-        document.getElementById("status").innerText += " ✅ Mapping complete.";
-      },
+          clusterManager = new MarkerClusterer({ map, markers });
+          document.getElementById("status").innerText += " ✅ Mapping complete.";
+        },
+      });
     });
-  });
 
+    function updateProgress(done, total) {
+      document.getElementById("status").innerText = `Geocoding ${done} of ${total}...`;
+    }
 
     async function geocodeLocation(locationString, label) {
       return new Promise((resolve) => {
@@ -115,18 +144,4 @@
     }
 
     function addMarker(lat, lng, label) {
-      const marker = new google.maps.Marker({
-        position: { lat, lng },
-        title: label,
-      });
-
-      const info = new google.maps.InfoWindow({
-        content: `<strong>${label}</strong><br>Lat: ${lat.toFixed(4)}, Lng: ${lng.toFixed(4)}`
-      });
-
-      marker.addListener("click", () => info.open(map, marker));
-      markers.push(marker);
-    }
-  </script>
-</body>
-</html>
+      const marker = new g
