--- a/city-mapper-clustering.html
+++ b/city-mapper-clustering.html
@@ -6,7 +6,7 @@
   <title>City Mapper + GPX Routes</title>
 
   <!-- Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap" async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqdR-DJBX5mCsaw2yHbrLZqbeFZCW9jto&callback=initMap" async defer></script>
 
   <!-- MarkerClusterer -->
   <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/markerclusterer.umd.js"></script>
