--- a/city-mapper-clustering.html
+++ b/city-mapper-clustering.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>City Mapper + GPX Routes</title>
+  <title>City Mapper + Multi-GPX Routes</title>
 
-  <!-- Google Maps JavaScript API -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqdR-DJBX5mCsaw2yHbrLZqbeFZCW9jto&callback=initMap" async defer></script>
+  <!-- ✅ Google Maps JavaScript API -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMapApp"
+    async
+    defer></script>
 
-  <!-- MarkerClusterer -->
-  <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/markerclusterer.umd.js"></script>
+  <!-- ✅ Official MarkerClusterer CDN -->
+  <script src="https://cdn.jsdelivr.net/npm/@googlemaps/markerclusterer@2.5.3/dist/index.min.js"></script>
 
-  <!-- PapaParse -->
+  <!-- ✅ PapaParse for CSV parsing -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
   <style>
@@ -26,122 +29,5 @@
       gap: 10px;
       align-items: center;
     }
-    input[type="file"] { margin-right: 10px; }
-    #status { font-size: 0.9rem; color: #333; }
-    button {
-      padding: 6px 12px;
-      background: #0078ff;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover { background: #005fcc; }
-  </style>
-</head>
-<body>
-  <div id="controls">
-    <label>📍 CSV: <input type="file" id="csvFile" accept=".csv" /></label>
-    <button id="loadCsvBtn">Load CSV</button>
-
-    <label>🚴‍♂️ GPX: <input type="file" id="gpxFile" accept=".gpx" /></label>
-    <button id="loadGpxBtn">Load GPX</button>
-
-    <p id="status"></p>
-  </div>
-  <div id="map"></div>
-
-  <script>
-    let map;
-    let geocoder;
-    let markers = [];
-    let clusterManager;
-    let polyline;
-
-    function initMap() {
-      map = new google.maps.Map(document.getElementById("map"), {
-        center: { lat: 20, lng: 0 },
-        zoom: 2,
-      });
-      geocoder = new google.maps.Geocoder();
-    }
-
-    // --- Load CSV ---
-    document.getElementById("loadCsvBtn").addEventListener("click", () => {
-      const fileInput = document.getElementById("csvFile");
-      if (!fileInput.files.length) {
-        alert("Please select a CSV file first.");
-        return;
-      }
-
-      if (clusterManager) clusterManager.clearMarkers();
-      markers = [];
-
-      Papa.parse(fileInput.files[0], {
-        header: true,
-        skipEmptyLines: true,
-        complete: async (results) => {
-          const rows = results.data;
-          const total = rows.length;
-          let done = 0;
-
-          document.getElementById("status").innerText = `Starting geocoding... (0 of ${total})`;
-
-          for (const row of rows) {
-            const address = row["Address"]?.trim();
-            const city = row["City"]?.trim();
-            const zip = row["Zip Code"]?.trim();
-            const country = row["Country"]?.trim();
-            const lat = parseFloat(row["Latitude"]);
-            const lng = parseFloat(row["Longitude"]);
-
-            if (!address && !city && !zip && !country) {
-              done++;
-              continue;
-            }
-
-            if (!isNaN(lat) && !isNaN(lng)) {
-              addMarker(lat, lng, `${address || ""}, ${city || ""}`);
-              done++;
-              updateProgress(done, total);
-              continue;
-            }
-
-            let fullAddress = "";
-            if (address) fullAddress += address + ", ";
-            if (city) fullAddress += city + ", ";
-            if (zip) fullAddress += zip + ", ";
-            if (country) fullAddress += country;
-
-            await geocodeLocation(fullAddress, `${address || ""}, ${city || ""}`);
-            done++;
-            updateProgress(done, total);
-          }
-
-          clusterManager = new MarkerClusterer({ map, markers });
-          document.getElementById("status").innerText += " ✅ Mapping complete.";
-        },
-      });
-    });
-
-    function updateProgress(done, total) {
-      document.getElementById("status").innerText = `Geocoding ${done} of ${total}...`;
-    }
-
-    async function geocodeLocation(locationString, label) {
-      return new Promise((resolve) => {
-        geocoder.geocode({ address: locationString }, (results, status) => {
-          if (status === "OK" && results[0]) {
-            const loc = results[0].geometry.location;
-            addMarker(loc.lat(), loc.lng(), label);
-            resolve(loc);
-          } else {
-            console.warn(`Geocode failed for "${locationString}": ${status}`);
-            resolve(null);
-          }
-        });
-      });
-    }
-
-    function addMarker(lat, lng, label) {
-      const marker = new g
+    input[type="file"] { margin-right: 6px; }
+    #status { font-size: 0.9
