--- a/city-mapper-clustering.html
+++ b/city-mapper-clustering.html
@@ -7,7 +7,7 @@
 
   <!-- ✅ Google Maps JavaScript API -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMapApp"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqdR-DJBX5mCsaw2yHbrLZqbeFZCW9jto&callback=initMapApp"
     async
     defer></script>
 
