--- a/city-mapper-clustering.html
+++ b/city-mapper-clustering.html
@@ -30,4 +30,194 @@
       align-items: center;
     }
     input[type="file"] { margin-right: 6px; }
-    #status { font-size: 0.9
+    #status { font-size: 0.9rem; color: #333; }
+    button {
+      padding: 6px 12px;
+      background: #0078ff;
+      color: white;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+    button:hover { background: #005fcc; }
+  </style>
+</head>
+<body>
+  <div id="controls">
+    <label>📍 CSV: <input type="file" id="csvFile" accept=".csv" /></label>
+    <button id="loadCsvBtn">Load CSV</button>
+
+    <label>🚴‍♂️ GPX: <input type="file" id="gpxFile" accept=".gpx" multiple /></label>
+    <button id="loadGpxBtn">Load GPX</button>
+
+    <p id="status"></p>
+  </div>
+  <div id="map"></div>
+
+  <script>
+    let map;
+    let geocoder;
+    let markers = [];
+    let clusterManager;
+    let routeCount = 0;
+    const routeColors = ["#FF0000", "#0078FF", "#28A745", "#FF9900", "#800080"];
+    let legendDiv;
+
+    // === INIT MAP ===
+    function initMapApp() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: 20, lng: 0 },
+        zoom: 2,
+      });
+      geocoder = new google.maps.Geocoder();
+    }
+
+    // === LOAD CSV ===
+    document.getElementById("loadCsvBtn").addEventListener("click", () => {
+      const fileInput = document.getElementById("csvFile");
+      if (!fileInput.files.length) {
+        alert("Please select a CSV file first.");
+        return;
+      }
+
+      if (clusterManager) clusterManager.clearMarkers();
+      markers = [];
+
+      Papa.parse(fileInput.files[0], {
+        header: true,
+        skipEmptyLines: true,
+        complete: async (results) => {
+          const rows = results.data;
+          const total = rows.length;
+          let done = 0;
+          document.getElementById("status").innerText =
+            `Starting geocoding... (0 of ${total})`;
+
+          for (const row of rows) {
+            const address = row["Address"]?.trim();
+            const city = row["City"]?.trim();
+            const zip = row["Zip Code"]?.trim();
+            const country = row["Country"]?.trim();
+            const lat = parseFloat(row["Latitude"]);
+            const lng = parseFloat(row["Longitude"]);
+
+            if (!address && !city && !zip && !country) {
+              done++;
+              continue;
+            }
+
+            if (!isNaN(lat) && !isNaN(lng)) {
+              addMarker(lat, lng, `${address || ""}, ${city || ""}`);
+              done++;
+              updateProgress(done, total);
+              continue;
+            }
+
+            let fullAddress = "";
+            if (address) fullAddress += address + ", ";
+            if (city) fullAddress += city + ", ";
+            if (zip) fullAddress += zip + ", ";
+            if (country) fullAddress += country;
+
+            await geocodeLocation(fullAddress, `${address || ""}, ${city || ""}`);
+            done++;
+            updateProgress(done, total);
+          }
+
+          clusterManager = new markerClusterer.MarkerClusterer({ map, markers });
+          document.getElementById("status").innerText += " ✅ Mapping complete.";
+        },
+      });
+    });
+
+    function updateProgress(done, total) {
+      document.getElementById("status").innerText = `Geocoding ${done} of ${total}...`;
+    }
+
+    async function geocodeLocation(locationString, label) {
+      return new Promise((resolve) => {
+        geocoder.geocode({ address: locationString }, (results, status) => {
+          if (status === "OK" && results[0]) {
+            const loc = results[0].geometry.location;
+            addMarker(loc.lat(), loc.lng(), label);
+            resolve(loc);
+          } else {
+            console.warn(`Geocode failed for "${locationString}": ${status}`);
+            resolve(null);
+          }
+        });
+      });
+    }
+
+    function addMarker(lat, lng, label) {
+      const marker = new google.maps.Marker({
+        position: { lat, lng },
+        title: label,
+      });
+      const info = new google.maps.InfoWindow({
+        content: `<strong>${label}</strong><br>Lat: ${lat.toFixed(4)}, Lng: ${lng.toFixed(4)}`
+      });
+      marker.addListener("click", () => info.open(map, marker));
+      markers.push(marker);
+    }
+
+    // === LOAD MULTIPLE GPX ROUTES ===
+    document.getElementById("loadGpxBtn").addEventListener("click", () => {
+      const gpxInput = document.getElementById("gpxFile");
+      if (!gpxInput.files.length) {
+        alert("Please select at least one GPX file.");
+        return;
+      }
+
+      for (const file of gpxInput.files) {
+        const reader = new FileReader();
+        reader.onload = (e) => {
+          const xml = new DOMParser().parseFromString(e.target.result, "application/xml");
+          const points = xml.getElementsByTagName("trkpt");
+          const path = [];
+          for (let i = 0; i < points.length; i++) {
+            const lat = parseFloat(points[i].getAttribute("lat"));
+            const lng = parseFloat(points[i].getAttribute("lon"));
+            path.push({ lat, lng });
+          }
+
+          const color = routeColors[routeCount % routeColors.length];
+          const polyline = new google.maps.Polyline({
+            path,
+            geodesic: true,
+            strokeColor: color,
+            strokeOpacity: 0.9,
+            strokeWeight: 3,
+            map,
+          });
+
+          // Fit map to route
+          const bounds = new google.maps.LatLngBounds();
+          path.forEach(p => bounds.extend(p));
+          map.fitBounds(bounds);
+
+          // === Legend ===
+          if (!legendDiv) {
+            legendDiv = document.createElement("div");
+            legendDiv.id = "legend";
+            legendDiv.style.background = "white";
+            legendDiv.style.padding = "10px";
+            legendDiv.style.margin = "10px";
+            legendDiv.style.border = "1px solid #ccc";
+            legendDiv.style.borderRadius = "6px";
+            map.controls[google.maps.ControlPosition.RIGHT_TOP].push(legendDiv);
+            legendDiv.innerHTML = "<strong>Routes:</strong><br>";
+          }
+
+          legendDiv.innerHTML += `<div><span style="color:${color};font-weight:bold;">&#9632;</span> ${file.name}</div>`;
+          routeCount++;
+
+          document.getElementById("status").innerText =
+            `Loaded GPX route: ${file.name} (${points.length} points).`;
+        };
+        reader.readAsText(file);
+      }
+    });
+  </script>
+</body>
+</html>
