--- a/city-mapper-clustering-clubs.html
+++ b/city-mapper-clustering-clubs.html
@@ -7,7 +7,7 @@
 
   <!-- ✅ Google Maps API with Places Library -->
   <script
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMapApp"
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqdR-DJBX5mCsaw2yHbrLZqbeFZCW9jto&libraries=places&callback=initMapApp"
     async defer></script>
 
   <!-- ✅ MarkerClusterer CDN -->
