--- a/destinations.html
+++ b/destinations.html
@@ -1,7 +1,56 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>GPX → Places (Google + Map + Progress + Clusters)</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <!-- MarkerCluster -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.css" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.5.3/dist/MarkerCluster.Default.css" />
+  <script src="https://unpkg.com/leaflet.markercluster@1.5.3/dist/leaflet.markercluster.js"></script>
+
+  <style>
+    body{font-family:system-ui;max-width:1000px;margin:24px auto;padding:0 16px;color:#111}
+    h1{font-size:22px;margin-bottom:8px}
+    textarea{width:100%;height:140px;font-family:monospace;margin-top:8px}
+    .controls{display:flex;gap:8px;flex-wrap:wrap;margin:12px 0}
+    .log{background:#f7f7f8;padding:12px;border-radius:8px;border:1px solid #eee;white-space:pre-wrap;max-height:240px;overflow:auto}
+    #map{height:400px;margin-top:20px;border-radius:8px;border:1px solid #ccc}
+    #progress-container{width:100%;background:#eee;border-radius:8px;overflow:hidden;margin:12px 0;height:16px}
+    #progress{height:100%;width:0%;background:#4caf50;transition:width .25s}
+  </style>
+</head>
+<body>
+  <h1>GPX → Cities / Towns / Villages (Google Geocoding + Map + Progress)</h1>
+
+  <div class="controls">
+    <input id="gpxfile" type="file" accept=".gpx,.xml" />
+    <input id="apikey" type="text" placeholder="Google Maps API key" style="min-width:220px" />
+    <input id="delay" type="number" value="300" min="0" style="width:110px" />
+    <label for="delay">ms delay</label>
+    <button id="start">Process GPX</button>
+    <button id="download" disabled>Download CSV</button>
+  </div>
+
+  <div id="progress-container"><div id="progress"></div></div>
+
+  <label><strong>Raw GPX (first 1000 chars)</strong></label>
+  <textarea id="gpxpreview" readonly></textarea>
+
+  <h3>Map Preview</h3>
+  <div id="map"></div>
+
+  <h3>Log</h3>
+  <div id="log" class="log"></div>
+
 <script>
 const $ = id => document.getElementById(id);
 const logEl = $('log');
-function log(...a){ logEl.textContent += a.join(' ') + '\n'; logEl.scrollTop = logEl.scrollHeight; }
+const csv = rows.map(r => r.map(c => '"' + String(c).replace(/"/g,'""') + '"').join(',')).join('\n');
+
 
 // GPX parsing
 function parseGPX(text){
@@ -125,7 +174,8 @@ $('start').onclick=async ()=>{
   }
 
   const rows=[["place","lat","lon"],...places.values()].map(r=>Array.isArray(r)?r:[r.place,r.lat,r.lon]);
-  const csv = rows.map(r => r.map(c => '"' + String(c).replace(/"/g,'""') + '"').join(',')).join('\n');
+  const csv=rows.map(r=>r.map(c=>'"'+String(c).replace(/"/g,'""')+'"').join(',')).join('
+');
   const blob=new Blob([csv],{type:'text/csv'});
   const url=URL.createObjectURL(blob);
 
@@ -141,3 +191,5 @@ $('start').onclick=async ()=>{
   log('Done. Found '+places.size+' places.');
 };
 </script>
+</body>
+</html>
